# MRTD_Automatisation_GPIB

./: .gitignore  CMakeLists.txt  GUI-V2.glade  MEMO.txt  README.txt  main.c  todo.txt
include/: core.h  gpib.h  measure.h  ui.h
profiles/: JIM_COMPACT.json  SOPHIE-LITE.json
src/: gpib_ctrl.c  main.c  mrtd.c  parsing.c  services.c
src/gpib/: gpib_ctrl.c  gpib_read.c  gpib_write.c
src/gpib/gpib_linux/: gpib_linux_ctrl.c  gpib_linux_read.c
src/hmi/: GUI-V2.glade  gtk.css  gui.glade  gui_glade.bak  hmi_ui.c
src/job/: job_manager.c
src/thread/: thread_manual.c
